ACS-7886 Change from Travis to GHA for 7.2.2 service pack (#1558)
* ACS-7886 Change from Travis to GHA for 7.2.2 service pack

* ACS-7886 Temporary fix until community share is java 17 compliant

* ACS-7886 Fix tests by allowing reflective access

* ACS-7886 Compile with Java 11

* ACS-7886 No need for fix as now Java 11

* ACS-7886 Try with java 11 in setup-java-build

* ACS-7886 No need for fix as now java 11

* ACS-7886 Use java 11 for all java builds